--- a/WebApp/Properties/launchSettings.json
+++ b/WebApp/Properties/launchSettings.json
@@ -15,21 +15,19 @@
                 "ASPNETCORE_ENVIRONMENT": "Development"
             }
         },
-        "WebApp": {
+        "packt_webapp": {
             "commandName": "Project",
-            "launchBrowser": true,
             "environmentVariables": {
-                "ASPNETCORE_ENVIRONMENT": "Development"
+                "ASPNETCORE_ENVIRONMENT": "Production"
             },
-            "applicationUrl": "http://localhost:3776/"
+            "applicationUrl": "http://localhost:55870"
         },
-        "WebApp (Mine)": {
+        "packt_webapp (staging)": {
             "commandName": "Project",
-            "launchBrowser": true,
             "environmentVariables": {
-                "ASPNETCORE_ENVIRONMENT": "MyEnvironment"
+                "ASPNETCORE_ENVIRONMENT": "Staging"
             },
-            "applicationUrl": "http://localhost:3776/"
+            "applicationUrl": "http://localhost:55870"
         }
     }
 }
