--- a/WebApp/Properties/launchSettings.json
+++ b/WebApp/Properties/launchSettings.json
@@ -14,7 +14,8 @@
             "launchUrl": "swagger",
             "environmentVariables": {
                 "ASPNETCORE_ENVIRONMENT": "Development"
-            }
+            },
+            "applicationUrl": "http://localhost:55870"
         },
         "packt_webapp": {
             "commandName": "Project",
